[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/bylight/bylight.tres" type="DynamicFont" id=1]
[ext_resource path="res://gui/pause/options/rebind_option.gd" type="Script" id=2]

[node name="RebindOption" type="Button"]
anchor_right = 1.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 18 )
toggle_mode = true
action_mode = 0
button_mask = 3
flat = true
script = ExtResource( 2 )

[node name="ActionName" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
custom_fonts/font = ExtResource( 1 )
text = "[action]"

[node name="KeyList" type="Label" parent="."]
anchor_right = 1.0
rect_pivot_offset = Vector2( 640, 0 )
custom_fonts/font = ExtResource( 1 )
text = "[keys]"
align = 2

[connection signal="focus_exited" from="." to="." method="_on_RebindOption_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_RebindOption_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_RebindOption_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_RebindOption_pressed"]
